# bloch_sim_gui

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  DEVELOPER_GUIDE.md  LICENSE  MANIFEST.in  README.md  USER_GUIDE.md  bloch_core.h  bloch_core_modified.c  bloch_gui.py  bloch_gui.py.backup  bloch_gui.py.bak  bloch_gui.spec  bloch_gui_phantom_integration.py  bloch_simulator.py  bloch_wrapper.c  bloch_wrapper.pyx  bump_version.py  custom_build.py  index.html  kspace_widget.py  patch_gui_for_kspace.py  patch_gui_for_phantom.py  phantom_widget.py  pulse_loader.py  pyproject.toml  read_hdf5_matlab.m  requirements.txt  run_bloch_sim.ipynb  self_testing.md  setup.py  spectral_phantom.py  test_adiabatic_and_heatmap.py  test_import_fix.sh  test_mode_a.ipynb  test_mode_b.ipynb  test_optimizations.py  visualization_export.py
_dev/: index.html
blochsimulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: DEVELOPER_GUIDE.md  TUTORIAL_MODE.md  USER_GUIDE.md  conf.py  modules.rst  self_testing.md
examples/: read_hdf5_examples.py  run_bloch_sim.ipynb  run_bloch_sim.py  spin_echo_analysis.ipynb  spin_echo_analysis_data.h5  spin_echo_reproduction.ipynb
exports/: .gitkeep
scripts/: build_pyinstaller.sh  build_web.py  custom_build.py  dev_server.py  epi_simulation.ipynb  package_for_release.sh  patch_gui_for_phantom.py
tests/: test_dependencies.py  test_export_simple.py  test_frequency_offsets.py  test_gui_smoke.py  test_input_shapes.py  test_memory_limits.py  test_notebook_examples.py  test_notebook_export.py  test_ssfp_sequence.py  (+1 more)
(+59 files in other folders)
